testsuite/tests/saks/should_fail/T18863b.stderr

T18863b.hs:9:1: error: [GHC-83865]
    • Couldn't match expected kind: forall i -> i -> *
                  with actual kind: i -> *
    • In the data type declaration for ‘IDb’
